--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,6 @@
 plugins {
     id 'java'
+    id 'org.jetbrains.kotlin.jvm' version '1.4.10'
 }
 
 group 'org.MilesNocte'
@@ -11,6 +12,7 @@ repositories {
 }
 
 dependencies {
+    implementation "org.jetbrains.kotlin:kotlin-stdlib"
     implementation 'org.jetbrains:annotations:19.0.0'
     compile ("net.dv8tion:JDA:4.2.0_227") {
         exclude module: 'opus-java'
