--- a/build.gradle
+++ b/build.gradle
@@ -12,12 +12,20 @@ repositories {
 }
 
 dependencies {
-    implementation "org.jetbrains.kotlin:kotlin-stdlib"
-    implementation 'org.jetbrains:annotations:19.0.0'
+    compile "org.jetbrains.kotlin:kotlin-stdlib"
+    compile 'org.jetbrains:annotations:19.0.0'
     compile ("net.dv8tion:JDA:4.2.0_227") {
         exclude module: 'opus-java'
     }
     compile("ch.qos.logback:logback-classic:1.2.3")
     compile group: 'org.xerial', name: 'sqlite-jdbc', version: '3.32.3.2'
 
+}
+task fatJar(type: Jar) {
+    manifest {
+        attributes 'Implementation-Title': 'Gradle Jar File Example',
+                'Main-Class': 'Main.JDA'
+    }
+    from { configurations.compile.collect { it.isDirectory() ? it : zipTree(it) } }
+    with jar
 }
