--- a/build.gradle
+++ b/build.gradle
@@ -19,6 +19,8 @@ dependencies {
     }
     compile("ch.qos.logback:logback-classic:1.2.3")
     compile group: 'org.xerial', name: 'sqlite-jdbc', version: '3.32.3.2'
+    compile 'com.vdurmont:emoji-java:5.1.1'
+
 
 }
 task fatJar(type: Jar) {
