--- a/.gitignore
+++ b/.gitignore
@@ -332,3 +332,4 @@ gradle-app.setting
 # End of https://www.toptal.com/developers/gitignore/api/java,linux,macos,gradle,windows,intellij,intellij+all,intellij+iml
 
 VCP.db
+/src/main/java/Main/Credentials.java
