--- a/build.gradle
+++ b/build.gradle
@@ -1,32 +1,27 @@
 plugins {
     id 'java'
+    id 'application'
     id 'org.jetbrains.kotlin.jvm' version '1.4.10'
+    id 'com.github.johnrengelman.shadow' version '5.2.0'
 }
 
-group 'org.MilesNocte'
-version '1.0'
+sourceCompatibility = targetCompatibility = 1.8
+mainClassName = 'JDA'
 
 repositories {
     mavenCentral()
     jcenter()
+    maven { // on kotlin dsl use `maven("https://m2.dv8tion.net/releases")` instead
+        url "https://m2.dv8tion.net/releases"
+    }
 }
 
 dependencies {
     compile "org.jetbrains.kotlin:kotlin-stdlib"
     compile 'org.jetbrains:annotations:19.0.0'
-    compile ("net.dv8tion:JDA:4.2.0_247") {
-        exclude module: 'opus-java'
-    }
+    compile ("net.dv8tion:JDA:4.2.1_273")
     compile("ch.qos.logback:logback-classic:1.2.3")
     compile group: 'org.xerial', name: 'sqlite-jdbc', version: '3.32.3.2'
     compile 'com.vdurmont:emoji-java:5.1.1'
-}
-
-task fatJar(type: Jar) {
-    manifest {
-        attributes 'Implementation-Title': 'Gradle Jar File Example',
-                'Main-Class': 'Main.JDA'
-    }
-    from { configurations.compile.collect { it.isDirectory() ? it : zipTree(it) } }
-    with jar
+    compile 'dev.cerus:jda-slash-commands:1.3.1'
 }
