--- a/build.gradle
+++ b/build.gradle
@@ -5,7 +5,7 @@ plugins {
     id 'com.github.johnrengelman.shadow' version '5.2.0'
 }
 
-sourceCompatibility = targetCompatibility = 14
+sourceCompatibility = targetCompatibility = 17
 mainClassName = 'JDA'
 
 repositories {
@@ -17,10 +17,12 @@ repositories {
 }
 
 dependencies {
-    compile "org.jetbrains.kotlin:kotlin-stdlib"
-    compile 'org.jetbrains:annotations:19.0.0'
+    compile 'org.jetbrains.kotlin:kotlin-stdlib:1.5.31'
+    compile 'org.jetbrains:annotations:22.0.0'
     compile ("net.dv8tion:JDA:4.3.0_314")
-    compile("ch.qos.logback:logback-classic:1.2.3")
+    compile('ch.qos.logback:logback-classic:1.2.6')
     compile group: 'org.xerial', name: 'sqlite-jdbc', version: '3.32.3.2'
     compile 'com.vdurmont:emoji-java:5.1.1'
 }
+sourceCompatibility = JavaVersion.VERSION_17
+targetCompatibility = JavaVersion.VERSION_17
