Update to JDA 5

--- a/build.gradle
+++ b/build.gradle
@@ -8,6 +8,8 @@ plugins {
 sourceCompatibility = targetCompatibility = 17
 mainClassName = 'JDA'
 
+
+
 repositories {
     mavenCentral()
     maven { // on kotlin dsl use `maven("https://m2.dv8tion.net/releases")` instead
@@ -22,9 +24,10 @@ repositories {
 dependencies {
     implementation 'org.jetbrains.kotlin:kotlin-stdlib:1.6.0'
     implementation 'org.jetbrains:annotations:22.0.0'
-    implementation 'net.dv8tion:JDA:4.3.0_346'
-    implementation 'ch.qos.logback:logback-classic:1.2.7'
+    implementation 'net.dv8tion:JDA:5.0.0-alpha.4'
+    implementation 'ch.qos.logback:logback-classic:1.2.10'
     implementation group: 'org.xerial', name: 'sqlite-jdbc', version: '3.32.3.2'
     implementation 'com.vdurmont:emoji-java:5.1.1'
     implementation 'org.jsoup:jsoup:1.14.3'
+    implementation 'com.fasterxml.jackson.core:jackson-databind:2.13.1'
 }
