--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,6 @@
 plugins {
     id 'java'
     id 'application'
-    id 'org.jetbrains.kotlin.jvm' version '1.6.0'
     id 'com.github.johnrengelman.shadow' version '5.2.0'
 }
 
@@ -11,7 +10,7 @@ mainClassName = 'JDA'
 
 repositories {
     mavenCentral()
-    maven { // on kotlin dsl use `maven("https://m2.dv8tion.net/releases")` instead
+    maven {
         name 'm2-dv8tion'
         url 'https://m2.dv8tion.net/releases'
     }
@@ -21,7 +20,6 @@ repositories {
 }
 
 dependencies {
-    implementation 'org.jetbrains.kotlin:kotlin-stdlib:1.6.0'
     implementation 'org.jetbrains:annotations:22.0.0'
     implementation 'net.dv8tion:JDA:5.0.0-alpha.+'
     implementation 'ch.qos.logback:logback-classic:1.2.10'
