--- a/build.gradle
+++ b/build.gradle
@@ -20,6 +20,7 @@ repositories {
 }
 
 dependencies {
+    implementation 'net.sourceforge.htmlunit:htmlunit:2.58.0'
     implementation 'org.jetbrains:annotations:22.0.0'
     implementation 'net.dv8tion:JDA:5.0.0-alpha.+'
     implementation 'ch.qos.logback:logback-classic:1.2.10'
