--- a/build.gradle
+++ b/build.gradle
@@ -20,12 +20,13 @@ repositories {
 }
 
 dependencies {
-    implementation 'net.sourceforge.htmlunit:htmlunit:2.58.0'
-    implementation 'org.jetbrains:annotations:22.0.0'
-    implementation 'net.dv8tion:JDA:5.0.0-alpha.+'
-    implementation 'ch.qos.logback:logback-classic:1.2.10'
+    implementation 'org.jetbrains:annotations:23.0.0'
+    implementation 'net.dv8tion:JDA:5.0.0-alpha.9'
+    implementation 'ch.qos.logback:logback-classic:1.2.11'
     implementation group: 'org.xerial', name: 'sqlite-jdbc', version: '3.32.3.2'
     implementation 'com.vdurmont:emoji-java:5.1.1'
     implementation 'org.jsoup:jsoup:1.14.3'
-    implementation 'com.fasterxml.jackson.core:jackson-databind:2.13.1'
+    implementation 'com.fasterxml.jackson.core:jackson-databind:2.13.2'
+    implementation group: 'ru.yandex.qatools.ashot', name: 'ashot', version: '1.5.4'
+    implementation group: 'org.seleniumhq.selenium', name: 'selenium-firefox-driver', version: '4.1.2'
 }
