--- a/DiscordBot/DiscordBot.csproj
+++ b/DiscordBot/DiscordBot.csproj
@@ -8,20 +8,23 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="Discord.Net" Version="3.13.0" />
-        <PackageReference Include="Discord.Net.Commands" Version="3.13.0" />
-        <PackageReference Include="Discord.Net.Core" Version="3.13.0" />
-        <PackageReference Include="Discord.Net.Interactions" Version="3.13.0" />
-        <PackageReference Include="Discord.Net.Rest" Version="3.13.0" />
-        <PackageReference Include="Discord.Net.Webhook" Version="3.13.0" />
-        <PackageReference Include="Discord.Net.WebSocket" Version="3.13.0" />
+        <PackageReference Include="Discord.Net" Version="3.13.1" />
+        <PackageReference Include="Discord.Net.Commands" Version="3.13.1" />
+        <PackageReference Include="Discord.Net.Core" Version="3.13.1" />
+        <PackageReference Include="Discord.Net.Interactions" Version="3.13.1" />
+        <PackageReference Include="Discord.Net.Rest" Version="3.13.1" />
+        <PackageReference Include="Discord.Net.Webhook" Version="3.13.1" />
+        <PackageReference Include="Discord.Net.WebSocket" Version="3.13.1" />
+        <PackageReference Include="Fergun.Interactive" Version="1.7.5" />
+        <PackageReference Include="Microsoft.Extensions.Configuration" Version="8.0.0" />
+        <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="8.0.0" />
         <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
-        <PackageReference Include="Npgsql" Version="8.0.1" />
+        <PackageReference Include="Npgsql" Version="8.0.2" />
         <PackageReference Include="Serilog" Version="3.1.2-dev-02097" />
         <PackageReference Include="Serilog.Extensions.Logging" Version="8.0.1-dev-10370" />
         <PackageReference Include="Serilog.Sinks.Console" Version="5.0.1" />
         <PackageReference Include="Serilog.Sinks.PostgreSQL" Version="2.3.0" />
-        <PackageReference Include="Dapper" Version="2.1.28" />
+        <PackageReference Include="Dapper" Version="2.1.35" />
         <PackageReference Include="Dapper.Contrib" Version="2.0.78" />
     </ItemGroup>
 
